seaqt/QtWidgets/gen_qtooltip.h

class QFont;
class QPalette;
class QPoint;
class QRect;
class QToolTip;
class QWidget;
typedef struct QFont QFont;
typedef struct QPalette QPalette;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QToolTip QToolTip;
typedef struct QWidget QWidget;
void QToolTip_showText(QPoint* pos, struct miqt_string text);
void QToolTip_hideText();
bool QToolTip_isVisible();
struct miqt_string QToolTip_text();
QPalette* QToolTip_palette();
void QToolTip_setPalette(QPalette* palette);
QFont* QToolTip_font();
void QToolTip_setFont(QFont* font);
void QToolTip_showText3(QPoint* pos, struct miqt_string text, QWidget* w);
void QToolTip_showText4(QPoint* pos, struct miqt_string text, QWidget* w, QRect* rect);
void QToolTip_showText5(QPoint* pos, struct miqt_string text, QWidget* w, QRect* rect, int msecShowTime);